# lit-explorer

./: spec.md
.claude/: settings.json
engine/: pyproject.toml  requirements.txt
engine/src/lit_engine/: __init__.py  cli.py  config.py
engine/src/lit_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine/src/lit_engine/analyzers/: __init__.py  agency.py  chapters.py  dialogue.py  pacing.py  readability.py  sentiment.py  silence.py  texttiling.py
engine/src/lit_engine/nlp/: __init__.py  chapter_detect.py  coref.py  dialogue_extract.py  loader.py  sentence_locate.py  verb_categories.py
engine/src/lit_engine/output/: __init__.py  json_export.py
engine/tests/: conftest.py  test_agency.py  test_auto_detect.py  test_chapter_detect.py  test_chapters.py  test_cli_agency.py  test_cli_stage3.py  test_cli_stage4.py  test_coref.py  test_dialogue_analyzer.py  test_dialogue_extract.py  test_extract.py  test_fallback_paths.py  test_json_export.py  test_loader.py  test_mattr.py  test_pacing.py  test_prepare_text.py  test_readability.py  test_sentence_locate.py  test_sentiment.py  test_silence.py  test_specimen_e2e.py  test_texttiling.py  test_toposort.py  test_verb_categories.py
engine/tests/fixtures/: sample_text.txt
explorer/: README.md  package-lock.json  package.json  vite.config.ts
explorer/src/: app.css  app.html
explorer/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
explorer/tests/unit/: block-explorer.test.ts  chapters-page.test.ts  characters-page.test.ts  chart-export.test.ts  (+3 more)
scripts/: run-reviews.sh
(+29 files in other folders)
