[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-engine"
version = "0.1.0"
description = "Computational stylistics engine for literary manuscripts"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.7",
    "nltk>=3.8",
    "textstat>=0.7",
    "vaderSentiment>=3.3",
    "click>=8.0",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.7", "seaborn>=0.13"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
lit-engine = "lit_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
